--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,9 +3,6 @@
   padding: 20px;
   width: 250px;
   height: 100vh;
-  position: fixed;
-  right: 0;
-  top: 80px;
 }
 
 .cart h2 {
@@ -33,6 +30,7 @@
   background-color: #ff3030;
   width: 100%;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 .insideCart-btn button:nth-child(2) {
   border: none;
@@ -41,4 +39,5 @@
   color: white;
   background-color: #ff9900;
   width: 100%;
+  cursor: pointer;
 }
